# santosbot

./: .buildpacks  .gitignore  .gitmodules  Gustavo Santos Quote Extractor.ipynb  LICENSE.md  Procfile  README.md  docker-compose.yml  heroku.yml  package.json  quotes.py  requirements.txt  run_bot.py  santosbot.Procfile
api/: .flake8  .gitignore  Dockerfile  README.md
api/api/: __init__.py  quotes.py  services.py
backend/: .gitignore  Dockerfile  README.md  heroku.sh  pyproject.toml
backend/api/: __init__.py  quotes.py
bot/: .dockerignore  .dockerignore    .gitignore  Dockerfile  README.md  heroku.sh  main.py  requirements.txt
config/: nginx.conf.erb
frontend/: Dockerfile  README.md  heroku.sh  package-lock.json  package.json  server.js  vue.config.js
frontend/src/: App.vue
frontend/src/assets/css/: app.scss  background.scss  hellocard.scss  slack.scss
frontend/src/components/: HelloCard.vue  Slack.vue  SlackMessage.vue
utils/: Gustavo Santos Quote Extractor.ipynb
