[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Andre Silva <andreffs18@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.25.0"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target_version = ['py37']
